--- a/mNet/Dashboard.storyboard
+++ b/mNet/Dashboard.storyboard
@@ -69,6 +69,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q5q-Xy-Pbt" userLabel="Pending Approvals Button">
                                 <rect key="frame" x="27" y="163" width="100" height="66.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="pendingApprovalsButtonAction:" destination="lrb-xA-0fc" eventType="touchUpInside" id="uuT-gb-0Gq"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x55-qU-at0">
                                 <rect key="frame" x="147" y="163" width="11" height="24"/>
@@ -85,6 +88,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dY6-rQ-dpZ" userLabel="Pending Verifications Button">
                                 <rect key="frame" x="147" y="163" width="100" height="66.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="pendingVerificationsButtonAction:" destination="lrb-xA-0fc" eventType="touchUpInside" id="p9Y-Gx-EfC"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F8l-RN-ukK">
                                 <rect key="frame" x="267" y="163" width="18.5" height="24"/>
@@ -101,6 +107,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElN-kT-jmc" userLabel="Unread Messages Button">
                                 <rect key="frame" x="267" y="163" width="100" height="66.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="unreadMessagesButtonAction:" destination="lrb-xA-0fc" eventType="touchUpInside" id="c8b-hk-hiY"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY APPS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aY6-xW-7a7" customClass="CustomBlueTextColorLabel" customModule="mNet" customModuleProvider="target">
                                 <rect key="frame" x="27" y="279" width="72.5" height="19.5"/>
