--- a/mNet/ApproveReject.storyboard
+++ b/mNet/ApproveReject.storyboard
@@ -242,13 +242,13 @@
                                                 <rect key="frame" x="27" y="633.5" width="321" height="95"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Role" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gho-w7-wIi" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                        <rect key="frame" x="110.5" y="0.0" width="101" height="17"/>
+                                                        <rect key="frame" x="110" y="0.0" width="101" height="17"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                                         <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J14-vS-iz4" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                        <rect key="frame" x="219.5" y="0.0" width="101.5" height="17"/>
+                                                        <rect key="frame" x="219" y="0.0" width="102" height="17"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                                         <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -311,7 +311,7 @@
                                                         </connections>
                                                     </tableView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnI-0k-N1G" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="102" height="17"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="101.5" height="17"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                                         <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -939,17 +939,17 @@
                                         <rect key="frame" x="20" y="16" width="355" height="75"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="saU-hh-X1U">
-                                            <size key="itemSize" width="100" height="85"/>
+                                            <size key="itemSize" width="100" height="75"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="approvalSectionsCollectionViewCell" id="scL-uu-XCj" customClass="ApprovalSectionCollectionViewCell" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="-5" width="100" height="85"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="75"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="85"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="75"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNe-dX-zBF" customClass="CustomBlueTextColorLabel" customModule="mNet" customModuleProvider="target">
@@ -1007,7 +1007,7 @@
                                     <constraint firstAttribute="trailing" secondItem="XyG-0J-0bC" secondAttribute="trailing" id="uF9-Fv-xbs"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="215" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FlS-pH-e24">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="215" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FlS-pH-e24">
                                 <rect key="frame" x="0.0" y="221.5" width="375" height="445.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <searchBar key="tableHeaderView" contentMode="redraw" searchBarStyle="minimal" id="DHT-Qm-mhZ">
@@ -1040,7 +1040,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PUB:16-17:000015 (PO)  | 19-12-2016" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QIg-LT-Uug" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                    <rect key="frame" x="68" y="26" width="236" height="14.5"/>
+                                                    <rect key="frame" x="68" y="25" width="236" height="15.5"/>
                                                     <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="12"/>
                                                     <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -1053,7 +1053,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xa2-cC-bcM">
-                                                    <rect key="frame" x="180" y="167.5" width="50" height="20"/>
+                                                    <rect key="frame" x="180" y="162.5" width="50" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="pmx-UD-Wgi"/>
                                                     </constraints>
@@ -1081,7 +1081,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uIt-pd-rx2">
-                                                    <rect key="frame" x="320" y="21" width="28" height="24"/>
+                                                    <rect key="frame" x="320" y="20.5" width="28" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="28" id="Rta-Ha-BXY"/>
                                                         <constraint firstAttribute="height" constant="24" id="aXY-ZQ-W1n"/>
@@ -1094,7 +1094,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rs 11,61,22,912.00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSb-eG-QZF" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
                                                     <rect key="frame" x="68" y="56" width="198.5" height="32.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="33" id="3Rf-XA-3AU"/>
+                                                        <constraint firstAttribute="height" constant="32.5" id="r0t-M8-4cE"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="SanFranciscoDisplay-Medium" family="San Francisco Display" pointSize="26"/>
                                                     <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -1168,10 +1168,8 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="xQ5-2a-2s0" firstAttribute="centerY" secondItem="rDw-rq-qpc" secondAttribute="centerY" id="5Jn-sD-HDU"/>
-                                                <constraint firstItem="QIg-LT-Uug" firstAttribute="centerY" secondItem="xQ5-2a-2s0" secondAttribute="centerY" id="7vc-ly-loA"/>
                                                 <constraint firstItem="oSb-eG-QZF" firstAttribute="leading" secondItem="QIg-LT-Uug" secondAttribute="leading" id="B7W-6F-khh"/>
                                                 <constraint firstItem="uIt-pd-rx2" firstAttribute="centerY" secondItem="QIg-LT-Uug" secondAttribute="centerY" id="Cb5-nl-ash"/>
-                                                <constraint firstItem="xQ5-2a-2s0" firstAttribute="top" secondItem="2Qt-wT-KXh" secondAttribute="top" constant="25" id="ET8-aw-TEt"/>
                                                 <constraint firstItem="xQ5-2a-2s0" firstAttribute="leading" secondItem="2Qt-wT-KXh" secondAttribute="leading" constant="27" id="FKB-HY-PE1"/>
                                                 <constraint firstItem="uIt-pd-rx2" firstAttribute="leading" secondItem="QIg-LT-Uug" secondAttribute="trailing" constant="16" id="FMj-uC-g18"/>
                                                 <constraint firstItem="rDw-rq-qpc" firstAttribute="width" secondItem="rDw-rq-qpc" secondAttribute="height" multiplier="1:1" id="Hk3-2Z-YkH"/>
@@ -1180,14 +1178,16 @@
                                                 <constraint firstItem="od9-L6-epC" firstAttribute="leading" secondItem="Ure-wK-W5m" secondAttribute="leading" id="PlY-Y9-aYp"/>
                                                 <constraint firstItem="xQ5-2a-2s0" firstAttribute="width" secondItem="xQ5-2a-2s0" secondAttribute="height" multiplier="1:1" id="QhY-G6-gXe"/>
                                                 <constraint firstItem="Ure-wK-W5m" firstAttribute="leading" secondItem="oSb-eG-QZF" secondAttribute="leading" id="RK2-2M-K4i"/>
+                                                <constraint firstItem="QIg-LT-Uug" firstAttribute="centerY" secondItem="xQ5-2a-2s0" secondAttribute="centerY" id="UAs-CA-ZW0"/>
                                                 <constraint firstAttribute="trailing" secondItem="uIt-pd-rx2" secondAttribute="trailing" constant="27" id="Upj-tI-b7I"/>
                                                 <constraint firstItem="xQ5-2a-2s0" firstAttribute="width" secondItem="xQ5-2a-2s0" secondAttribute="height" multiplier="1:1" id="Vsy-wE-VmB"/>
                                                 <constraint firstItem="Ure-wK-W5m" firstAttribute="top" secondItem="oSb-eG-QZF" secondAttribute="bottom" constant="17" id="Yri-h9-YPZ"/>
                                                 <constraint firstAttribute="bottom" secondItem="od9-L6-epC" secondAttribute="bottom" constant="22" id="ZaI-np-tUs"/>
                                                 <constraint firstItem="oSb-eG-QZF" firstAttribute="top" secondItem="QIg-LT-Uug" secondAttribute="bottom" constant="16" id="c2Y-Gt-i9I"/>
                                                 <constraint firstItem="od9-L6-epC" firstAttribute="top" secondItem="Ure-wK-W5m" secondAttribute="bottom" constant="15" id="gE1-4B-wht"/>
+                                                <constraint firstItem="QIg-LT-Uug" firstAttribute="top" secondItem="2Qt-wT-KXh" secondAttribute="top" constant="25" id="iGX-iP-IxN"/>
                                                 <constraint firstItem="rDw-rq-qpc" firstAttribute="width" secondItem="rDw-rq-qpc" secondAttribute="height" multiplier="1:1" id="iWr-M2-gu4"/>
-                                                <constraint firstItem="Xa2-cC-bcM" firstAttribute="height" secondItem="od9-L6-epC" secondAttribute="height" constant="-10" id="pYb-5k-gCa"/>
+                                                <constraint firstItem="Xa2-cC-bcM" firstAttribute="height" secondItem="od9-L6-epC" secondAttribute="height" id="pYb-5k-gCa"/>
                                                 <constraint firstItem="Xa2-cC-bcM" firstAttribute="centerY" secondItem="od9-L6-epC" secondAttribute="centerY" id="rVR-oE-wy3"/>
                                                 <constraint firstItem="QIg-LT-Uug" firstAttribute="leading" secondItem="rDw-rq-qpc" secondAttribute="trailing" constant="17" id="stJ-bH-D5w"/>
                                                 <constraint firstAttribute="trailing" secondItem="Ure-wK-W5m" secondAttribute="trailing" id="udP-gq-Crf"/>
